<resources>
    <string name="app_name">Cerita Kamu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Favorite</string>
    <string name="title_notifications">Profile</string>

    // Onboarding
    <string name="app_logo">Logo</string>
    <string name="gambar_onboarding">Gambar onboarding</string>
    <string name="text_onboarding1">Selamat datang di Pengelola Koleksi Buku!\nTemukan cara mudah untuk mengelola koleksi bukumu.</string>
    <string name="text_onboarding2">Temukan buku-buku terbaru\nCari dan eksplorasi berbagai buku dari koleksi besar kami.</string>
    <string name="text_onboarding3">Kelola koleksi bukumu\nTambahkan buku ke koleksimu dan tandai buku favorit.</string>
    <string name="welcome">Selamat Datang di Cerita Camu!</string>
    <string name="welcome_lastonboarding">Aplikasi sederhana untuk menemukan buku favoritmu dengan mudah. Cari, temukan, baca!</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="next">Next</string>


    // Login Register
    <string name="back">Back</string>
    <string name="login_welcome">Silahkan Masuk Terlebih Dahulu</string>
    <string name="login_desc">Hai! Selamat datang kembali</string>
    <string name="email">Email</string>
    <string name="masukkan_email">Masukkan email</string>
    <string name="password">Password</string>
    <string name="masukkan_password">Masukkan password</string>
    <string name="toggle_visibility">Toggle Visibility</string>
    <string name="belum_memiliki_akun">Belum memiliki akun? Daftar</string>
    <string name="register_welcome">Silahkan Buat Akun Terlebih Dahulu</string>
    <string name="register_desc">Isi Informasi di bawah ini</string>
    <string name="nama">Nama</string>
    <string name="masukkan_nama_anda">Masukkan nama anda</string>
    <string name="sudah_memiliki_akun">Sudah memiliki akun? Masuk</string>

    // Home dan Detail
    <string name="book_cover">Book Cover</string>
    <string name="open_preview_link">Open Preview Link</string>
    <string name="open_info_link">Open Info Link</string>
    <string name="panelization_summary">Panelization Summary</string>
    <string name="reading_modes">Reading Modes</string>
    <string name="content_version">Content Version</string>
    <string name="anonymous_logging">Anonymous Logging</string>
    <string name="maturity_rating">Maturity Rating</string>
    <string name="print_type">Print Type</string>
    <string name="categories">Categories</string>
    <string name="language">Language</string>
    <string name="page_count">Page Count</string>
    <string name="description">Description</string>
    <string name="published_date">Published Date</string>
    <string name="publisher">Publisher</string>
    <string name="authors">Authors</string>
    <string name="title">Title</string>

    // Search dan favorite
    <string name="search">Search</string>
    <string name="search_icon">Search Icon</string>
    <string name="indonesia">Indonesia</string>
    <string name="inggris">Inggris</string>
    <string name="cari_sesuatu">Cari sesuatu...</string>
    <string name="pilih_bahasa_dan_masukkan_pencarian">Pilih bahasa dan masukkan pencarian</string>
    <string name="tambah_ke_favorite">Tambah ke favorite</string>

</resources>