<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/Iv_backLogin"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back"
            android:layout_marginBottom="50dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_welcome"
                android:textSize="19sp"
                android:textColor="@color/purple_200"
                android:fontFamily="@font/poppins" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_desc"
                android:textSize="18sp"
                android:textColor="@color/teks"
                android:fontFamily="@font/bryndan"
                android:layout_marginBottom="30dp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            android:textSize="18sp"
            android:textColor="@color/teks"
            android:fontFamily="@font/merienda"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@color/teal_200"
            android:fontFamily="@font/merienda"
            android:hint="@string/masukkan_nama_anda"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="18sp"
            android:textColor="@color/teks"
            android:fontFamily="@font/merienda"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@color/teal_200"
            android:fontFamily="@font/merienda"
            android:hint="@string/masukkan_email"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textSize="16sp"
            tools:ignore="Autofill" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="18sp"
            android:textColor="@color/teks"
            android:fontFamily="@font/merienda"
            android:layout_marginBottom="8dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/teal_200"
                android:fontFamily="@font/merienda"
                android:hint="@string/masukkan_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/visibilityToggleRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/toggle_visibility"
                android:src="@drawable/visibility_off"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/passwordInput"
                android:layout_marginEnd="16dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:backgroundTint="@color/purple_200"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/merienda"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_button" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sudah_memiliki_akun"
            android:textSize="16sp"
            android:textColor="@color/teks"
            android:fontFamily="@font/bryndan"
            android:layout_gravity="center" />
    </LinearLayout>
</ScrollView>
