<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/lastonboarding"
        android:contentDescription="@string/app_logo"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="20sp"
            android:textColor="@color/purple_200"
            android:fontFamily="@font/poppins"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="230dp"
            android:background="@android:color/transparent" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_lastonboarding"
            android:textSize="20sp"
            android:textColor="@color/teks"
            android:fontFamily="@font/bryndan"
            android:gravity="center"
            android:layout_marginBottom="24dp"
            android:background="@android:color/transparent" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/register"
            android:backgroundTint="@color/purple_200"
            android:textColor="@color/white"
            android:fontFamily="@font/merienda"
            android:background="@drawable/rounded_button"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/login"
            android:backgroundTint="@color/purple_200"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/merienda" />
    </LinearLayout>
</FrameLayout>
