<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <RelativeLayout
        android:id="@+id/onboarding_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/onboarding_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/gambar_onboarding"
            android:scaleType="fitXY"
            android:src="@drawable/onboarding1" />

        <TextView
            android:id="@+id/onboarding_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="17dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="17dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/bryndan"
            android:gravity="center"
            android:text="@string/text_onboarding1"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

</RelativeLayout>
